--- a/index.css
+++ b/index.css
@@ -1,25 +1,71 @@
+*{
+    font-family: 'PT Sans', sans-serif;
+    font-size: 30px;
+    margin: 0;
+}
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background: url('http://www.miguelclaro.com/wp/wp-content/uploads/2013/01/IMG_0944-Panorama-Final-net.jpg');
+}
+input{
+    outline:none;
+    border: solid black 1px;
+}
+h1{
+    position: absolute;
+    color: white;
+    top: 0px;
+}
 #calc{
     display: flex;
     flex-direction: column;
-    width: 500px;
-    height:800px;
-    background: white;
+    width: 400px;
+    height:500px;
+    
+   
 }
 #calcBody{
+flex: 10;
 display: flex;
-flex-direction: column;
+flex-direction: column; 
+height: 100%;
 width: 100%;
-flex:20;
+opacity: .8;
 }
 
 #screen{
-    flex:1;
-    height: 100px;
+    flex: 1;
 }
-
+#screen input{
+    background: rgb(22, 35, 79);
+    color: white;
+    opacity: .83;
+}
+#equ{
+    flex:2.12;
+    
+    
+}
+#Input{
+    width: 99.7%;
+    height: 100%;
+}
 .number{
     flex:1;
+    
+    background: rgb(60, 61, 71);
+    color: rgb(216, 182, 13);
 }
-.column{
+.number:hover{
+    background: url('http://www.volt.org/Geteducated/skyglow2.gif');
+    color: white;
+}
 
+.row{
+    width: 100%;
+    height: 100%;
+    display: flex;
 }
