--- a/index.css
+++ b/index.css
@@ -40,8 +40,8 @@ opacity: .8;
     flex: 1;
 }
 #screen input{
-    background: rgb(22, 35, 79);
-    color: white;
+    background: rgba(0, 0, 0, .7);
+    color: rgb(26, 163, 163);
     opacity: .83;
 }
 #equ{
@@ -57,7 +57,7 @@ opacity: .8;
     flex:1;
     
     background: rgb(60, 61, 71);
-    color: rgb(216, 182, 13);
+    color: rgb(26, 163, 163)
 }
 .number:hover{
     background: url('http://www.volt.org/Geteducated/skyglow2.gif');
